<resources>
    <string name="app_name">My Resources</string>
    <string name="support_no" translatable="false">xxxxxx</string>
    <string name="hello_world">Hello World!</string>
    <string name="how_are_you">how are you</string>
    <string name="tittle">tittle</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Phone_Number">Phone Number</string>

</resources>